This file contains a summary of important user-visible changes.

Changes since 1.8
=================

New Features:
* A new parametric theory of sequences whose syntax is compatible with the
  syntax for sequences used by Z3.
* Arrays: Added support for an `eqrange` predicate. `(eqrange a b i j)` is true
  if arrays `a` and `b` are equal on all indices within indices `i` and `j`.

Improvements:
* New API: Added functions to retrieve the heap/nil term when using separation
  logic.

Changes:
* SyGuS: Removed support for SyGuS-IF 1.0.
* Removed Java and Python bindings for the legacy API

Changes since 1.7
=================

New Features:
* New C++ and Python API: CVC4 has a new, more streamlined API. We plan to
  make CVC4 1.8 the last version that ships with the legacy API.
* Strings: Full support of the new SMT-LIB standard for the theory of strings,
  including:
  * Support for `str.replace_re`, `str.replace_re_all`, `str.is_digit`,
    `str.from_code`, `re.diff`, and `re.comp`
  * Support for new operator names (e.g. `str.in_re` instead of `str.in.re`),
    new escape sequences. The new syntax is enabled by default for smt2 files.
* Support for syntax-guided synthesis (SyGuS) problems in the new API. C++
  examples of the SyGuS API can be found in `./examples/api/sygus_*.cpp`.
* Support for higher-order constraints. This includes treating function sorts
  (constructible by `->`) as first-class sorts and handling partially applied
  function symbols. Support for higher-order constraints can be enabled by
  the option `--uf-ho`.
* Support for set comprehension binders `comprehension`.
* Eager bit-blasting: Support for SAT solver Kissat.

Improvements:
* API: Function definitions can now be requested to be global. If the `global`
  parameter is set to true, they persist after popping the user context.
* Java/Python bindings: The bindings now allow users to catch exceptions
* Arithmetic: Performance improvements